--- a/config.toml
+++ b/config.toml
@@ -1,19 +1,19 @@
 [AssistanceLevels]
-A = 0.0
-B = 0.0
-Y = 0.0
-X = 0.0
-Bumper_Right = 0.0
-Bumper_Left = 0.0
-Thumb_Right = 0.0
-Thumb_Left = 0.0
-DirPad_X = 0.0
-DirPad_Y = 0.0
-Trigger_Right = 0.0
-Trigger_Left = 0.0
+A = 0.0 # Can only be 0 or 1
+B = 0.0 # Can only be 0 or 1
+Y = 0.0 # Can only be 0 or 1
+X = 0.0 # Can only be 0 or 1
+Bumper_Right = 0.0 # Can only be 0 or 1
+Bumper_Left = 0.0 # Can only be 0 or 1
+Thumb_Right = 0.0 # Can only be 0 or 1
+Thumb_Left = 0.0 # Can only be 0 or 1
+DirPad_X = 0.0 # Can only be 0 or 1
+DirPad_Y = 0.0 # Can only be 0 or 1
+Trigger_Right = 0.0 # Can only be 0 or 1
+Trigger_Left = 0.0 # Can only be 0 or 1
 Stick_Right_X = 0.0
 Stick_Right_Y = 0.0
 Stick_Left_X = 0.0
 Stick_Left_Y = 0.0
-Back = 0.0
-Start = 0.0
+Back = 0.0 # Can only be 0 or 1
+Start = 0.0 # Can only be 0 or 1
