Distinguishing Policy by Type

--- a/config.toml
+++ b/config.toml
@@ -17,3 +17,23 @@ Stick_Left_X = 0.0
 Stick_Left_Y = 0.0
 Back = 0.0 # Can only be 0 or 1
 Start = 0.0 # Can only be 0 or 1
+
+[PolicyTypes]
+A = "POLICY_BIN_EXCLUSIVITY"
+B = "POLICY_BIN_EXCLUSIVITY"
+Y = "POLICY_BIN_EXCLUSIVITY"
+X = "POLICY_BIN_EXCLUSIVITY"
+Bumper_Right = "POLICY_BIN_EXCLUSIVITY"
+Bumper_Left = "POLICY_BIN_EXCLUSIVITY"
+Thumb_Right = "POLICY_BIN_EXCLUSIVITY"
+Thumb_Left = "POLICY_BIN_EXCLUSIVITY"
+DirPad_X = "POLICY_BIN_EXCLUSIVITY"
+DirPad_Y = "POLICY_BIN_EXCLUSIVITY"
+Trigger_Right = "POLICY_BIN_EXCLUSIVITY"
+Trigger_Left = "POLICY_BIN_EXCLUSIVITY"
+Stick_Right_X = "POLICY_CONT_EXCLUSIVITY"
+Stick_Right_Y = "POLICY_CONT_EXCLUSIVITY"
+Stick_Left_X = "POLICY_CONT_EXCLUSIVITY"
+Stick_Left_Y = "POLICY_CONT_EXCLUSIVITY"
+Back = "POLICY_BIN_EXCLUSIVITY"
+Start = "POLICY_BIN_EXCLUSIVITY"
