Added AND and OR Binary Merge Logics

--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ Thumb_Right = 0.0 # Can only be 0 or 1
 Thumb_Left = 0.0 # Can only be 0 or 1
 DirPad_X = 0.0 # Can only be 0 or 1
 DirPad_Y = 0.0 # Can only be 0 or 1
-Trigger_Right = 1.0 # Can only be 0 or 1
+Trigger_Right = 0.0 # Can only be 0 or 1
 Trigger_Left = 0.0 # Can only be 0 or 1
 Stick_Right_X = 1.0
 Stick_Right_Y = 1.0
@@ -29,7 +29,7 @@ Thumb_Right = "POLICY_BIN_EXCLUSIVITY"
 Thumb_Left = "POLICY_BIN_EXCLUSIVITY"
 DirPad_X = "POLICY_BIN_EXCLUSIVITY"
 DirPad_Y = "POLICY_BIN_EXCLUSIVITY"
-Trigger_Right = "POLICY_BIN_EXCLUSIVITY"
+Trigger_Right = "POLICY_BIN_OR"
 Trigger_Left = "POLICY_BIN_EXCLUSIVITY"
 Stick_Right_X = "POLICY_CONT_EXCLUSIVITY"
 Stick_Right_Y = "POLICY_CONT_EXCLUSIVITY"
