New CONT_OR Policy

--- a/config.toml
+++ b/config.toml
@@ -11,8 +11,8 @@ DirPad_X = 0.0 # Can only be 0 or 1
 DirPad_Y = 0.0 # Can only be 0 or 1
 Trigger_Right = 1.0 # Can only be 0 or 1
 Trigger_Left = 0.0 # Can only be 0 or 1
-Stick_Right_X = 1.0
-Stick_Right_Y = 1.0
+Stick_Right_X = 0.0
+Stick_Right_Y = 0.0
 Stick_Left_X = 0.0
 Stick_Left_Y = 0.0
 Back = 0.0 # Can only be 0 or 1
@@ -32,8 +32,8 @@ DirPad_X = "POLICY_BIN_EXCLUSIVITY"
 DirPad_Y = "POLICY_BIN_EXCLUSIVITY"
 Trigger_Right = "POLICY_CONT_EXCLUSIVITY"
 Trigger_Left = "POLICY_BIN_EXCLUSIVITY"
-Stick_Right_X = "POLICY_CONT_EXCLUSIVITY"
-Stick_Right_Y = "POLICY_CONT_EXCLUSIVITY"
+Stick_Right_X = "POLICY_CONT_OR"
+Stick_Right_Y = "POLICY_CONT_OR"
 Stick_Left_X = "POLICY_CONT_EXCLUSIVITY"
 Stick_Left_Y = "POLICY_CONT_EXCLUSIVITY"
 Back = "POLICY_BIN_EXCLUSIVITY"
