Fixed all Warnings + reset_controls

--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,7 @@ Thumb_Right = "POLICY_BIN_EXCLUSIVITY"
 Thumb_Left = "POLICY_BIN_EXCLUSIVITY"
 DirPad_X = "POLICY_BIN_EXCLUSIVITY"
 DirPad_Y = "POLICY_BIN_EXCLUSIVITY"
-Trigger_Right = "POLICY_CONT_EXCLUSIVITY"
+Trigger_Right = "POLICY_CONT_OR"
 Trigger_Left = "POLICY_BIN_EXCLUSIVITY"
 Stick_Right_X = "POLICY_CONT_OR"
 Stick_Right_Y = "POLICY_CONT_OR"
