Transformed Policies into classes

--- a/config.toml
+++ b/config.toml
@@ -21,20 +21,20 @@ Start = 0.0 # Can only be 0 or 1
 # The Policy also determines whether the Input is Merged using Binary or Continuous Logic
 [PolicyTypes]
 A = "POLICY_BIN_OR"
-B = "POLICY_BIN_EXCLUSIVITY"
-Y = "POLICY_BIN_EXCLUSIVITY"
+B = "POLICY_EXCLUSIVITY"
+Y = "POLICY_EXCLUSIVITY"
 X = "POLICY_BIN_OR"
-Bumper_Right = "POLICY_BIN_EXCLUSIVITY"
-Bumper_Left = "POLICY_BIN_EXCLUSIVITY"
-Thumb_Right = "POLICY_BIN_EXCLUSIVITY"
-Thumb_Left = "POLICY_BIN_EXCLUSIVITY"
-DirPad_X = "POLICY_BIN_EXCLUSIVITY"
-DirPad_Y = "POLICY_BIN_EXCLUSIVITY"
+Bumper_Right = "POLICY_EXCLUSIVITY"
+Bumper_Left = "POLICY_EXCLUSIVITY"
+Thumb_Right = "POLICY_EXCLUSIVITY"
+Thumb_Left = "POLICY_EXCLUSIVITY"
+DirPad_X = "POLICY_EXCLUSIVITY"
+DirPad_Y = "POLICY_EXCLUSIVITY"
 Trigger_Right = "POLICY_CONT_OR"
-Trigger_Left = "POLICY_BIN_EXCLUSIVITY"
+Trigger_Left = "POLICY_EXCLUSIVITY"
 Stick_Right_X = "POLICY_CONT_OR"
 Stick_Right_Y = "POLICY_CONT_OR"
-Stick_Left_X = "POLICY_CONT_EXCLUSIVITY"
-Stick_Left_Y = "POLICY_CONT_EXCLUSIVITY"
-Back = "POLICY_BIN_EXCLUSIVITY"
-Start = "POLICY_BIN_EXCLUSIVITY"
+Stick_Left_X = "POLICY_EXCLUSIVITY"
+Stick_Left_Y = "POLICY_EXCLUSIVITY"
+Back = "POLICY_EXCLUSIVITY"
+Start = "POLICY_EXCLUSIVITY"
