--- a/config.toml.example
+++ b/config.toml.example
@@ -1,4 +1,12 @@
-[AssistanceLevels]
+# This file is an example of the configuration file for Copilot
+# The configuration file is used to define how each input is mapped to the controller and how the inputs are merged
+# The file is divided into two sections: AssistanceLevels and PolicyTypes
+# - The AssistanceLevels section is used to define how much help the human player (using a physical controller) will receive. Set the value to 1.0 for full assistance and 0.0 for no assistance
+#   This section can be repeated to define the assistance levels for multiple human players
+# - The PolicyTypes section is used to define how the inputs are merged. Refer to command_arbitrator/policies for details on the available merging policies
+
+# Configuration for the first human player
+[[AssistanceLevels]]
 A = 0.0 # Can only be 0 or 1
 B = 0.0 # Can only be 0 or 1
 Y = 0.0 # Can only be 0 or 1
@@ -18,7 +26,28 @@ Stick_Left_Y = 0.0
 Back = 0.0 # Can only be 0 or 1
 Start = 0.0 # Can only be 0 or 1
 
-# The Policy also determines whether the Input is Merged using Binary or Continuous Logic
+# Configuration for the second human player
+[[AssistanceLevels]]
+A = 0.0 # Can only be 0 or 1
+B = 0.0 # Can only be 0 or 1
+Y = 0.0 # Can only be 0 or 1
+X = 0.0 # Can only be 0 or 1
+Bumper_Right = 0.0 # Can only be 0 or 1
+Bumper_Left = 0.0 # Can only be 0 or 1
+Thumb_Right = 0.0 # Can only be 0 or 1
+Thumb_Left = 0.0 # Can only be 0 or 1
+DirPad_X = 0.0 # Can only be 0 or 1
+DirPad_Y = 0.0 # Can only be 0 or 1
+Trigger_Right = 0.0 # Can only be 0 or 1
+Trigger_Left = 0.0 # Can only be 0 or 1
+Stick_Right_X = 0.0
+Stick_Right_Y = 0.0
+Stick_Left_X = 0.0
+Stick_Left_Y = 0.0
+Back = 0.0 # Can only be 0 or 1
+Start = 0.0 # Can only be 0 or 1
+
+# Command merging policies
 [PolicyTypes]
 A = "POLICY_BIN_OR"
 B = "POLICY_EXCLUSIVITY"
