--- a/config/game.toml.example
+++ b/config/game.toml.example
@@ -7,6 +7,7 @@
 # Game Configuration for Ultimate Doom
 [game]
 name = "Ultimate Doom"
+action_name = "DoomAction"
 
 # These are the commands that the game expects to receive, for the specified actions
 [actions]
