--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,5 @@ dependencies = [
 dev = ["pytest"]
 
 [tool.setuptools.packages.find]
-where = ["copilot"]
+where = ["copilot/copilot"]
 include = ["copilot/copilot/*"]
