updated package metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "copilot"
+name = "GamePals"
 version = "1.0"
-description = "Framework to enables shared control over video game instances"
+description = "GamePals framework to enables shared control over video game instances"
 authors = [
-  { name="Matteo Manzoni", email="matteo.manzoni2@studenti.unimi.it" },
+  { name="Matteo Manzoni", email="matteo.manzoni@unimi.it" },
   { name="Filippo Corti", email="filippo.corti1@studenti.unimi.it" }
 ]
 readme = "README.md"
